objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Annual Sales Quota</description>
        <label>Quota</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada East</fullName>
                </value>
                <value>
                    <fullName>Canada West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Corp HQ</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>ATPI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highspot_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Highspot User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to display the ZoomInfo component on the Account and Contact pages</description>
        <inlineHelpText>Used to display the ZoomInfo component on the Account and Contact pages</inlineHelpText>
        <label>ZoomInfo User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_LEGACY_ID__c</fullName>
        <label>SFDC_LEGACY_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>